--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^24",
+    "@types/node": "^24.*.*",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   }
